--- a/android/lib/resource/src/main/res/values-ru/strings.xml
+++ b/android/lib/resource/src/main/res/values-ru/strings.xml
@@ -64,6 +64,7 @@
     <string name="cancel">Отмена</string>
     <string name="changes_dialog_subtitle">Изменения в этой версии:</string>
     <string name="cipher">Шифр</string>
+    <string name="close">Закрыть</string>
     <string name="confirm_local_dns">Локальный DNS-сервер не будет работать, пока вы не включите «Обмен данными в локальной сети» в разделе «Параметры».</string>
     <string name="confirm_no_email">Вы собираетесь отправить отчет о проблеме, не оставив контакты. Если вы хотите получить ответ, введите свой адрес электронной почты.</string>
     <string name="confirm_removal">Выйти из профиля на устройстве</string>
@@ -193,6 +194,7 @@
     <string name="max_devices_resolved_title">Отлично!</string>
     <string name="max_devices_warning_description">Выйдите из учетной записи хотя бы на одном из устройств, удалив его из списка ниже. Имя устройства указано в настройках учетной записи.</string>
     <string name="max_devices_warning_title">Слишком много устройств</string>
+    <string name="more_information">Подробнее</string>
     <string name="mullvad_account_number">Номер учетной записи Mullvad</string>
     <string name="mullvad_owned_only">Только принадлежащие Mullvad</string>
     <string name="name">Имя</string>
@@ -213,6 +215,7 @@
     <string name="obfuscation_title">Обфускация WireGuard</string>
     <string name="off">Выключен</string>
     <string name="on">Включен</string>
+    <string name="open_url">Открыть URL</string>
     <string name="out_address">Выход</string>
     <string name="out_of_time">Закончилось время</string>
     <string name="overrides_cleared">Переопределения удалены</string>
@@ -244,6 +247,7 @@
     <string name="quantum_resistant_info_first_paragaph">Эта функция делает туннель WireGuard устойчивым к потенциальным атакам с использованием квантовых компьютеров.</string>
     <string name="quantum_resistant_info_second_paragaph">Для этого функция выполняет дополнительный обмен ключами с использованием квантово-устойчивого алгоритма и добавляет результат к обычному шифрованию WireGuard. Эта дополнительная мера использует примерно 500 КиБ трафика при каждом создании нового туннеля.</string>
     <string name="quantum_resistant_title">Квантово-устойчивый туннель</string>
+    <string name="reconnect">Переподключить</string>
     <string name="redeem">Погасить</string>
     <string name="redeem_voucher">Погасить ваучер</string>
     <string name="remove_button">Удалить</string>
