--- a/android/lib/resource/src/main/res/values-zh-rTW/strings.xml
+++ b/android/lib/resource/src/main/res/values-zh-rTW/strings.xml
@@ -64,6 +64,7 @@
     <string name="cancel">取消</string>
     <string name="changes_dialog_subtitle">此版本中的變更：</string>
     <string name="cipher">加密方式</string>
+    <string name="close">關閉</string>
     <string name="confirm_local_dns">若要使本機 DNS 伺服器運作，需先在「偏好設定」下啟用「本機網路共用」。</string>
     <string name="confirm_no_email">您即將傳送的問題報告未包含回覆方式資訊。如果想收到您這份報告的回覆，請輸入您的電子郵件位址。</string>
     <string name="confirm_removal">是，將裝置登出</string>
@@ -193,6 +194,7 @@
     <string name="max_devices_resolved_title">太好了！</string>
     <string name="max_devices_warning_description">請從底下清單至少移除一個裝置來將其登出。您可以在裝置的「帳戶」設定下找到相應裝置名稱。</string>
     <string name="max_devices_warning_title">裝置過多</string>
+    <string name="more_information">更多資訊</string>
     <string name="mullvad_account_number">Mullvad 帳號</string>
     <string name="mullvad_owned_only">僅 Mullvad 自有</string>
     <string name="name">名稱</string>
@@ -213,6 +215,7 @@
     <string name="obfuscation_title">WireGuard 混淆</string>
     <string name="off">關閉</string>
     <string name="on">開啟</string>
+    <string name="open_url">開啟 URL</string>
     <string name="out_address">出境</string>
     <string name="out_of_time">逾時</string>
     <string name="overrides_cleared">覆寫設定已清除</string>
@@ -244,6 +247,7 @@
     <string name="quantum_resistant_info_first_paragaph">借助此功能，WireGuard 通道便能夠抵抗可能從量子電腦發起的攻擊。</string>
     <string name="quantum_resistant_info_second_paragaph">實現方法是使用量子安全演算法執行額外的金鑰交換，並將結果混合至 WireGuard 的常規加密。每次建立新通道時，這一額外步驟都會使用約 500 kiB 流量。</string>
     <string name="quantum_resistant_title">抗量子通道</string>
+    <string name="reconnect">重新連線</string>
     <string name="redeem">兌換</string>
     <string name="redeem_voucher">兌換憑證</string>
     <string name="remove_button">移除</string>
